Version 1alpha4 - internally released 2012-11-19
cmb     implemented resetting of votes from back-end

Version 1alpha3 - internally released 2012-07-04
cmb	made sorting and filtering case insensitive (but not yet locale aware)
cmb	added: list view signals, if current user has already voted

Version 1alpha2 - internally released 2012-06-13
cmb	changed: states have classes instead of fixed colors (inspired by svasti)
cmb	changed: default column widths and font-size larger (suggested by svasti)
cmb	added possibility to vote (suggested by svasti)

Version 1alpha1 - internally released 2012-06-10
cmb	fixed bug: empty link field was displayed (reported by svasti)
cmb	fixed bug: newlines were not properly escaped in JSON response
cmb	fixed bug: list refresh was done asynchronously
cmb	added copyright and license information
cmb	added basic back-end
cmb	added i18n
cmb	added config options folder_data and col_widths
cmb	added file locking and some error handling
cmb	cleaned up code

Version 1dev1 - internally released 2012-06-06
cmb	initial release